# pico_temperature_cpp

./: .gitignore  CMakeLists.txt  README.md  lcd.h  pico_temperature_cpp.cpp
